--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "dependencies": {
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
+    "@tailwindcss/forms": "^0.5.7",
     "@tanstack/react-query": "^5.8.3",
+    "@tanstack/react-query-devtools": "^5.8.4",
+    "@tanstack/react-query-next-experimental": "^5.8.4",
     "firebase-admin": "^11.11.0",
     "next": "14.0.2",
     "openai": "^4.17.5",
