--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tanstack/react-query": "^5.8.3",
     "@tanstack/react-query-devtools": "^5.8.4",
     "@tanstack/react-query-next-experimental": "^5.8.4",
+    "firebase": "^10.6.0",
     "firebase-admin": "^11.11.0",
     "next": "14.0.2",
     "openai": "^4.17.5",
