--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-google-recaptcha": "^3.1.0",
+    "resend": "^4.0.0",
     "uuid": "^9.0.1",
     "yup": "^1.3.2",
     "zustand": "^4.4.6"
