--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "react-dom": "^18",
     "react-google-recaptcha": "^3.1.0",
     "resend": "^4.0.0",
-    "taglog-nodejs-client": "^0.0.3",
+    "taglog-nextjs-client": "^0.0.1",
     "uuid": "^9.0.1",
     "yup": "^1.3.2",
     "zustand": "^4.4.6"
